--- a/package.json
+++ b/package.json
@@ -10,13 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.6.3",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "boxicons": "^2.1.4",
+    "dotenv": "^16.3.1",
+    "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
+    "npm": "^9.8.1",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.1",
+    "sass": "^1.65.1",
+    "tailwindcss": "^3.3.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
