--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
@@ -26,8 +27,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.1",
+    "react-simplemde-editor": "^5.2.0",
     "sass": "^1.65.1",
     "tailwindcss": "^3.3.3",
     "zod": "^3.21.4"
